# athletic-analysis

./: .gitignore  README.md  pyproject.toml
athletic_analysis/: __init__.py  __main__.py
athletic_analysis/core/: angles.py  assessment.py  calibration.py  coaching.py  compare.py  confidence.py  diagnostics.py  events.py  filtering.py  form_overlay.py  preprocess.py  quality.py  radar.py  reference_pose.py  session.py  settings.py  velocity.py  video_source.py
athletic_analysis/core/metrics/: jump.py  sprint.py
athletic_analysis/core/pose/: base.py  detector.py  rtmpose_backend.py  skeleton.py
athletic_analysis/export/: csv_export.py  video_export.py
athletic_analysis/ui/: analysis_worker.py  assessment_worker.py  compare_panel.py  form_panel.py  form_review_panel.py  keyframe_strip.py  main_window.py  metrics_panel.py  plot_panel.py  radar_widget.py  rep_card.py  replay_clip.py  step_charts.py  suitability_panel.py  theme.py  timeline.py  transport.py  video_widget.py
ios/: README.md  swift-env.bat
ios/AthleticAnalysis/App/: AthleticAnalysisApp.swift  DesignSystem.swift  PhaseRibbon.swift
ios/AthleticAnalysisCore/: Package.swift
tests/: conftest.py  test_angles.py  test_assessment.py  test_coaching.py  test_compare.py  test_confidence.py  test_diagnostics.py  test_events.py  test_filtering.py  test_form_overlay.py  test_metrics.py  test_preprocess.py  test_quality.py  test_radar.py  test_reference_pose.py  test_tracking_quality.py  test_velocity.py  test_video_and_session.py
tools/: export_fixtures.py  export_pose_fixtures.py
(+33 files in other folders)
