[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "athletic-analysis"
version = "0.1.0"
description = "Kinovea-inspired sports video analysis with automatic pose estimation for sprint and jump form"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "onnxruntime",
    "rtmlib",
    "PySide6",
    "pyqtgraph",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
athlete-analysis = "athletic_analysis.__main__:main"

[tool.setuptools.packages.find]
include = ["athletic_analysis*"]
